--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <iframe  src="https://embed.lottiefiles.com/animation/122807" id="logo"></iframe>
             
                 <div class="contenedor animate-bg " >
-                    <h1 id="titulo">¡Descarga nuestra aplicacion aqui!</h1>
+                    <h1 id="titulo">¡Descarga nuestra aplicación aquí!</h1>
                     <img src="img\qr-code.png" id="QR" alt="foto de inicio">
                 
                     <a class="btn btn-dark btn-lg"  href="https://drive.google.com/file/d/1Kc8ONPQIkZ0wr0wZ8ElosAgdNABYmDwh/view?usp=share_link" role="button" id="check">Descargar App</a>
